unpackaged/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <label>Assessment</label>
    <nameField>
        <displayFormat>Question-{00}</displayFormat>
        <label>Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>