unpackaged/main/default/objects/Assessment__c/fields/Published_date__c.field-meta.xml
<CustomField>
    <fullName>Published_date__c</fullName>
    <label>Published date</label>
    <type>DateTime</type>
</CustomField>