unpackaged/main/default/objects/Assessment__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Technology Stack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>